--- a/app/src/main/res/layout/content_import_db.xml
+++ b/app/src/main/res/layout/content_import_db.xml
@@ -43,7 +43,7 @@
         android:layout_below="@id/import_db_label"
         android:text="@string/import_db" />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         app:cardBackgroundColor="?attr/backgroundColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -166,6 +166,6 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
