--- a/app/src/main/res/layout/content_view_serie.xml
+++ b/app/src/main/res/layout/content_view_serie.xml
@@ -27,7 +27,7 @@
     tools:context=".android.activities.ViewSerie"
     tools:showIn="@layout/activity_view_serie">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/serie_view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
