--- a/app/src/main/res/layout/header_result_item.xml
+++ b/app/src/main/res/layout/header_result_item.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     android:background="?attr/backgroundColor">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
@@ -43,6 +43,6 @@
         android:textColor="@color/white"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
