--- a/app/src/main/res/layout/wishlist_item.xml
+++ b/app/src/main/res/layout/wishlist_item.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     android:background="?attr/backgroundColor">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="7dp"
@@ -71,7 +71,7 @@
 
             </RelativeLayout>
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
