--- a/app/src/main/res/layout/content_add_tag.xml
+++ b/app/src/main/res/layout/content_add_tag.xml
@@ -22,12 +22,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".android.activities.add.AddTag"
+    tools:context=".android.activities.EditTag"
     tools:showIn="@layout/activity_add_tag">
 
     <LinearLayout
@@ -36,52 +36,83 @@
         android:orientation="vertical"
         android:paddingBottom="100dp">
 
-        <LinearLayout
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/add_tag_name_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:orientation="horizontal"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="0dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <TextView
                 android:id="@+id/tag_name_label"
-                android:text="@string/nav_title"
-                style="@style/TextAppearance.AppCompat.Large"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@string/tag_name"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/tag_name"
-                style="@style/TextAppearance.AppCompat.Large"
-                android:layout_width="wrap_content"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:textStyle="bold"
-                android:visibility="gone" />
+                android:inputType="text" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/add_tag_color"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:orientation="horizontal"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="0dp">
-            <CheckBox
-                android:id="@+id/tag_color"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:button="@drawable/color_picker_item"/>
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_marginLeft="7dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="3dp"
+            android:backgroundTint="?attr/foregroundColor"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2dp"
+            app:cardMaxElevation="2dp">
 
+            <LinearLayout
+                android:id="@+id/view_kino_review_review_date_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/tag_color_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tag_color"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent">
+                        <View
+                            android:id="@+id/tag_color_current"
+                            android:layout_centerInParent="true"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:visibility="visible"/>
+                    </RelativeLayout>
+
+                    <Button
+                        android:id="@+id/tag_color_update"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Modifier"
+                        tools:ignore="RelativeOverlap" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-
 </RelativeLayout>
