--- a/app/src/main/res/layout/main_result_item.xml
+++ b/app/src/main/res/layout/main_result_item.xml
@@ -64,6 +64,15 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:paddingBottom="5dp"/>
 
+                <LinearLayout
+                    android:id="@+id/main_result_kino_tags"
+                    android:paddingTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:orientation="horizontal">
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/main_result_kino_year"
                     style="@style/TextAppearance.AppCompat.Small"
