--- a/app/src/main/res/layout/activity_add_tag.xml
+++ b/app/src/main/res/layout/activity_add_tag.xml
@@ -23,21 +23,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="?attr/backgroundColor"
     tools:context=".android.activities.EditTag">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarLayout">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
+    <include layout="@layout/toolbar" />
     <include layout="@layout/content_add_tag" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
