--- a/app/src/main/res/layout/activity_export_db.xml
+++ b/app/src/main/res/layout/activity_export_db.xml
@@ -21,21 +21,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="?attr/foregroundColor"
     tools:context=".io.exportdb.ExportDb">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarLayout">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
+    <include layout="@layout/toolbar" />
     <include layout="@layout/content_export_db" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
