--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -19,8 +19,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/backgroundColor">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -29,7 +28,6 @@
         android:layout_marginTop="3dp"
         android:layout_marginRight="7dp"
         android:layout_marginBottom="3dp"
-        android:backgroundTint="?attr/foregroundColor"
         app:cardCornerRadius="5dp"
         app:cardElevation="1dp"
         app:cardMaxElevation="1dp">
