[ CineLog / View Binding ] migrate EditReview from butterknife to ViewBinding

--- a/app/src/main/res/layout/activity_edit_review.xml
+++ b/app/src/main/res/layout/activity_edit_review.xml
@@ -24,8 +24,9 @@
     android:fitsSystemWindows="true"
     tools:context=".android.activities.EditReview">
 
-    <include layout="@layout/toolbar" />
-    <include layout="@layout/content_edit_review" />
+    <include android:id="@+id/content_toolbar"
+        layout="@layout/toolbar" />
+    <include android:id="@+id/content_edit_review" layout="@layout/content_edit_review" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_save"
