[ CineLog / View Binding ] migrate TagsActivity from butterknife to ViewBinding

--- a/app/src/main/res/layout/activity_tags.xml
+++ b/app/src/main/res/layout/activity_tags.xml
@@ -34,7 +34,7 @@
             android:fitsSystemWindows="true"
             tools:context=".android.activities.MainActivity">
 
-            <include layout="@layout/toolbar" />
+            <include android:id="@+id/tags_toolbar" layout="@layout/toolbar" />
 
 
             <RelativeLayout
