--- a/app/src/main/res/layout/activity_view_kino.xml
+++ b/app/src/main/res/layout/activity_view_kino.xml
@@ -25,8 +25,8 @@
     android:fitsSystemWindows="true"
     tools:context=".android.activities.ViewKino">
 
-    <include layout="@layout/toolbar" />
-    <include layout="@layout/content_view_kino" />
+    <include android:id="@+id/view_kino_toolbar" layout="@layout/toolbar" />
+    <include android:id="@+id/view_kino_content" layout="@layout/content_view_kino" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
