--- a/app/src/main/res/layout/fragment_serie_view_general.xml
+++ b/app/src/main/res/layout/fragment_serie_view_general.xml
@@ -30,8 +30,8 @@
         android:orientation="vertical"
         android:paddingBottom="100dp">
 
-        <include layout="@layout/content_kino_view" />
-        <include layout="@layout/content_review_view" />
+        <include android:id="@+id/serie_view_kino_content" layout="@layout/content_kino_view" />
+        <include android:id="@+id/serie_review_kino_content" layout="@layout/content_review_view" />
 
     </LinearLayout>
 </ScrollView>
