[ CineLog / View Binding ] migrate ViewSerie from butterknife to ViewBinding

--- a/app/src/main/res/layout/activity_view_serie.xml
+++ b/app/src/main/res/layout/activity_view_serie.xml
@@ -24,8 +24,8 @@
     android:fitsSystemWindows="true"
     tools:context=".android.activities.ViewKino">
 
-    <include layout="@layout/toolbar_with_tabs" />
-    <include layout="@layout/content_view_serie" />
+    <include android:id="@+id/view_serie_toolbar" layout="@layout/toolbar_with_tabs" />
+    <include android:id="@+id/view_serie_content" layout="@layout/content_view_serie" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
